# Picking_Studio

./: CMakeLists.txt  package.xml
app/: main.cpp
include/Picking_Studio/: mainwindow.hpp
src/: mainwindow.cpp
